# my-own-specially-tailored-circle-of-hell

./: .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: autobuild.yml
assets/: meson.build
binding/: audio-binding.cpp  binding-mri.cpp  binding-util.cpp  binding-util.h  filesystem-binding.cpp  font-binding.cpp  graphics-binding.cpp  input-binding.cpp  meson.build  miniffi-binding.cpp  miniffi.cpp  miniffi.h  modshot-aleffect-binding.cpp  modshot-system-binding.cpp  modshot-window-binding.cpp  oneshot-binding.cpp  oneshot-journal-binding.cpp  oneshot-niko-binding.cpp  oneshot-steam-binding.cpp  oneshot-wallpaper-binding.cpp  osfm-screen-binding.cpp  plane-binding.cpp  sprite-binding.cpp  tilemap-binding.cpp  viewport-binding.cpp
journal/: journal.cpp  meson.build  resource.rc
journal/common/: journal_common.h
linux/: Makefile  vars.sh
macos/views/: TouchBar.mm
scripts/: meson.build
scripts/oneshot/: SaveLoad.rb
scripts/utils/: rpgscript.rb
shader/: chronos.frag  crt.frag  cubic_lens.frag  meson.build  obscured.frag  water.frag
src/: config.cpp  config.h  eventthread.cpp  eventthread.h  main.cpp  meson.build  settingsmenu.cpp  sharedstate.cpp  sharedstate.h
src/audio/: al-util.h  aldatasource.h  alstream.cpp  alstream.h  audio.cpp  audio.h  audiochannels.cpp  audiochannels.h  audiostream.cpp  audiostream.h  fluid-fun.cpp  midisource.cpp  sdlsoundsource.cpp  soundemitter.cpp  soundemitter.h  vorbissource.cpp
src/display/: bitmap.cpp  font.cpp  font.h  graphics.cpp  graphics.h  plane.cpp  plane.h  sprite.cpp  sprite.h  tilemap.cpp  tilemap.h  viewport.cpp  viewport.h  windowvx.cpp
src/display/gl/: gl-fun.cpp  gl-fun.h  gl-meta.cpp  gl-meta.h  glstate.cpp  glstate.h  scene.h  shader.cpp  shader.h  tileatlasvx.cpp
src/etc/: etc-internal.h  etc.cpp
src/filesystem/: filesystem.cpp  filesystem.h  filesystemImpl.cpp  filesystemImpl.h  filesystemImplApple.mm
src/filesystem/ghc/: filesystem.hpp
src/input/: input.cpp  input.h  keybindings.cpp  keybindings.h
src/net/: httplib.h
src/oneshot/: i18n.cpp  oneshot.cpp  oneshot.h  xdg-user-dir-lookup.c  xdg-user-dir-lookup.h
src/system/: system.h  systemImpl.cpp
src/util/: sdl-util.h  string-util.h  win-consoleutils.cpp
steamshim/: steamshim_parent.cpp
windows/: Makefile  resource.rc  shim.c  vars.sh
